# EinHF

./: .gitignore  LICENSE  README.md
einhf/: CMakeLists.txt  __init__.py  benzene.in  benzene_all.in  doc.rst  oxygen.in  plugin.cc  pymodule.py  rhf-gpu.h  rhf-gpu.hip  rhf.cc  rhf.h  rmp2-gpu.h  rmp2-gpu.hip  rmp2.cc  rmp2.h  scf-gpu.hip  scf-uhf.cc  scf-uhf.h  scf.cc  scf.h  uhf-gpu.h  uhf-gpu.hip  uhf.cc  uhf.h  ump2-gpu.h  ump2-gpu.hip  ump2.cc  ump2.h  water.in  water_all.in
einks/: CMakeLists.txt  __init__.py  doc.rst  plugin.cc  pymodule.py  rks.cc  rks.h
